--- a/HM_FillInfo.html
+++ b/HM_FillInfo.html
@@ -22,40 +22,59 @@
 
 	<hr class="hm-divide">
 
+	<!-- Learn more popup -->
+	<div id="mypop-learn">
+		<div class="container-ca pop-learn">
+			<img style="height: 40px" src="hm/MC.png">
+			<hr>
+			<div class="row">
+				<div class="col-75">
+					<div class="exp">
+						<img src="hm/autofill.png">
+						<p>Mastercard Instant Checkout autofills your card and shipping details for easier checkout.</p>
+					</div>
+					<div class="exp">
+						<img src="hm/protect.png">
+						<p>We protect your data by analyzing your online behaviour across devices and in comparison to other shoppers.</p>
+					</div>
+					<div class="exp">
+						<img src="hm/merchant.png">
+						<p>You can use this autofill feature across any merchants that take Mastercard online.</p>
+					</div>
+				</div>
+				<div class="col-25">
+					<div id="anim"></div>
+				</div>
+			</div>
+			<hr>
+			<div class="exp">
+				<div class="col-50">
+					<a href="HM_CAInfo.html"><button class="button-ca" style="margin: 20px 0 0;"><i class="fa fa-lock"></i>sign me up and Autofill</button></a>
+					<p>You can always <a href="">opt out</a> or change the <a href="">settings</a>.</p>
+				</div>
+				<div class="col-50">
+					<p><a href="" style="color: #000;">< Go back to normal checkout.</a></p>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end of Learn more popup -->
+
 	<!-- Wrapper -->
 	<div id="wrapper" class="divided">
 
 		<section class="wrapper style1 align-left">
 			<div class="inner medium">
-				<form action="HM_Confirmation.html">
-					<div class="row">
-						<div class="col-75">
-
-							<!-- Opt in option 1 -->
-<!-- 							<div class="container-ca">
-								<img style="height: 40px" src="hm/MC.png">
-								<p>Mastercard Instant Checkout has saved your card and shipping details from past purchases. You can now autofill the information whenever Mastercard is able to verify that your online behavior looks like you. <a href="#">Learn More</a></p>
-								<button class="button-ca" style="margin: 20px 0 0;"><i class="fa fa-lock"></i>sign me up and Autofill</button>
-								<p>You can always <a href="">opt out</a> or change the <a href="">settings</a>.</p>
-							</div> -->
-
-							<!-- Learn more popup -->
-<!-- 							<div class="container">
-								<img style="height: 40px" src="hm/MC.png">
-								<hr>
-								<div class="row">
-									<div class="col-50">
-										<div class="row">
-											<img src="hm/autofill.png">
-											<p>Mastercard Instant Checkout autofills your card and shipping details for easier checkout.</p>
-										</div>
-									</div>
-									<div class="col-50">
-										<img src="hm/GIF.png">
-									</div>
-								</div>
-							</div> -->
-
+				<div class="row">
+					<div class="col-75">
+						<!-- Opt in option 1 -->
+						<div class="container-ca">
+							<img style="height: 40px" src="hm/MC.png">
+							<p>Mastercard Instant Checkout has saved your card and shipping details from past purchases. You can now autofill the information whenever Mastercard is able to verify that your online behavior looks like you. <a onclick="myFunction()" style="cursor: pointer;">Learn More</a></p>
+							<a href="HM_CAInfo.html"><button class="button-ca" style="margin: 20px 0 0;"><i class="fa fa-lock"></i>sign me up and Autofill</button></a>
+							<p>You can always <a href="">opt out</a> or change the <a href="">settings</a>.</p>
+						</div>
+						<form action="HM_Confirmation.html">
 							<div class="container">
 								<h3>MY INFORMATION</h3>
 								<hr>
@@ -192,6 +211,37 @@
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script type="text/javascript" src="hm/FormValidation.js"></script>
+	<script type="text/javascript" src="assets/lottie.js"></script>
+	<script>
+			// When the user clicks on div, open the popup
+			function myFunction() {
+				var popup = document.getElementById("mypop-learn");
+				popup.classList.toggle("show");
 
-</body>
-</html>
+				$(document).mouseup(function(e)
+				{
+					var container = $(".pop-learn");
+
+			    // if the target of the click isn't the container nor a descendant of the container
+			    if (!container.is(e.target) && container.has(e.target).length === 0)
+			    {
+			    	if (popup.classList.contains('show')){
+			    	popup.classList.toggle("show");
+			    	}
+			    }
+			});
+			}
+
+			var animation = bodymovin.loadAnimation({
+				container: document.getElementById("anim"),
+				renderer: 'svg',
+				loop: true,
+				autoplay: true,
+				path: 'assets/data.json'
+
+			})
+
+		</script>
+
+	</body>
+	</html>
