adds w23 imgs and text

--- a/blog.html
+++ b/blog.html
@@ -202,7 +202,7 @@
 						</div>
 					</section>
 
-					<!-- Fourteen -->
+					<!-- Nineteen -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Weeknotes 19 - Merchant Focus, Physical Stores</h2>
@@ -216,7 +216,7 @@
 						</div>
 					</section>
 
-					<!-- Fifteen -->
+					<!-- Twenty -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>Weeknotes 20 - Sprint 5, Fear and Loathing in Physical Retail</h2>
@@ -230,19 +230,51 @@
 						</div>
 					</section>
 
-					<!-- Sixteen -->
+					<!-- Twentyone -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Weeknotes 21 - Merchant Focus, Physical Stores</h2>
+							<h2>Weeknotes 21 - Sprint 6 - Explaining Continuous Authentication, quickly</h2>
 							<p>Last week we had some great results - both qualitative and quantitative insights. <a href="https://www.nngroup.com/articles/why-you-only-need-to-test-with-5-users/">Nielsen (2000)</a> and Co. says 5 is the ideal number of user tests for quick heuristics to work out the majority of kinks before diminishing returns.</p>
 							<ul class="actions vertical">
 								<li><a href="week21.html" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/testing1.jpg" alt="" />
+							<img src="images/testing1.jpg" alt=""/>
 						</div>
 					</section>
+
+
+					<!-- Twentytwo -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 22 - Sprint 7</h2>
+							<p>xxx</p>
+							<ul class="actions vertical">
+								<li><a href="week22.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/map2.jpg" alt="" />
+						</div>
+					</section>
+
+					<!-- Twentythree -->
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 23 - xxxxx</h2>
+							<p>Last week we had some great results - both qualitative and quantitative insights. <a href="https://www.nngroup.com/articles/why-you-only-need-to-test-with-5-users/">Nielsen (2000)</a> and Co. says 5 is the ideal number of user tests for quick heuristics to work out the majority of kinks before diminishing returns.</p>
+							<ul class="actions vertical">
+								<li><a href="week22.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/testing1.jpg" alt=""/>
+						</div>
+					</section>
+
+
+
 
 
 
