updates w23 text, formatting

--- a/week23.html
+++ b/week23.html
@@ -45,11 +45,14 @@
 <header><h4><b>Our overarching sprint research question:</b></h4></header>
 
 <h4>What is the customer journey...</h4>
-<ul>for multiple step-ups?</ul>
-<ul>for the first purchase, and Nth purchase?</ul>
-<ul>between onboarding and the first purchase?</ul>
-<ul>as people stop using passwords gradually?</ul>
-<ul>from a web session point-of-view?</ul>
+	<ul>
+		<li>...for multiple step-ups?</li>
+		<li>...for the first purchase, and Nth purchase?</li>
+		<li>...between onboarding and the first purchase?</li>
+		<li>...as people stop using passwords gradually?</li>
+		<li>...from a web session point-of-view?</li>
+	</ul>
+
 
 <p>All of these questions forced us to define the sequence flow more concretely and also forced us to decide the difference between having people opt-in (telling them about the service) versus just auto-enrolling them. Our previous work with single UIs is a great starting place, but now we are testing the slight adjustments in the UIs over time.</p>
 
@@ -71,25 +74,25 @@
 		<th>Differentiation</th>
 	</tr>
 	<tr>
-		<td>A2.</td>
+		<td>A2</td>
 		<th>Invisible (no opt in)</td>
 		<th>Autofill with No Explanation</td>
 	</tr>
 
 	<tr>
-		<td>B1.</td>
+		<td>B1</td>
 		<th>Invisible (no opt in)</td>
 		<th>Opt In to Autofill</td>
 	</tr>
 
 	<tr>
-		<td>B2.</td>
+		<td>B2</td>
 		<th>Invisible (no opt in)</td>
 		<th>Opt Out of Autofill</td>
 	</tr>
 
 	<tr>
-		<td>C1.</td>
+		<td>C1</td>
 		<th>Opt in via bank app</td>
 		<th>Autofill with timeline</td>
 	</tr>
