text and html for w22 first draft

--- a/week22.html
+++ b/week22.html
@@ -35,6 +35,136 @@
 							</header>
 							<div class="content">
 
+
+
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_amin_pano.jpg" alt="" /></span>
+
+<header><h4><b>We went to NYC!</b></h4></header>
+
+<p>We had the great fortune to take the whole team to Mastercard’s Digital Payments and Labs office in the Flatiron neighborhood of New York City! This was a terrific chance for us to get expert feedback and interviews with internal people at Mastercard, get specific feedback on prototypes, and discuss the most valuable problems to work on for the last 6 weeks of the project.<p>
+
+<p>Moreover, we would get a chance to see exactly how the user experience team operates, and what their core values are, allowing us to develop a product, or products, that Mastercard will find real value in. This visit to NYC also allowed us to better formalize a go-to-market strategy, which our clients have explicitly asked from us.</p>
+
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_designerslunch.jpg" alt="" /></span>
+
+
+<header><h4><b>What we presented in NYC</b></h4></header>
+
+<p>Prep and visit Mastercard Digital Payments and Labs NYC</p>
+
+<p>We prepped for our trip to Mastercard the first part of the week and left Wednesday to be in-office for Thursday and Friday. The goal of the trip was to get client feedback and critique, as well as expert insights for product positioning, design for trust, and technology implementation issues. We prepared a slew of prototypes and made 5 posters bucketing our research:</p>
+<ul>
+	<li>Onboarding Experience</li>
+	<li>Digital Checkout</li>
+	<li>Consumer Adoption</li>
+	<li>Privacy and Creepiness</li>
+	<li>Physical Checkout</li>
+</ul>
+
+<iframe src="//www.slideshare.net/slideshow/embed_code/key/mYXM589TJ94iAc" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ScottLeinweber/mastercard-cmu-capstone-midsummer-presentation" title="Mastercard CMU Capstone Midsummer Presentation" target="_blank">Mastercard CMU Capstone Midsummer Presentation - June 21 </a> </strong> </div>
+
+
+<header><h4><b>NYC Feedback and Crit</b></h4></header>
+
+<p>The NYC trip was a terrific source of information and we’ve locked in the focus for the rest of the summer. Amin found specific people with terrific insight in designing similar systems. We talked with PMs that shipped tokenization technology and 3D Secure, another multiple factor security platform that had terrific insight on our issues. It was very reassuring to hear from Karen Pascoe, the SVP of Design, that this is a very timely topic for MC and our findings are of value to actual products. Our lunch crit with a dozen designers was a great roundtable discussion - they were very sharp and got immediately to the bone of the issue, asking interesting questions and prodding us in areas we haven’t discussed.</p>
+
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_posterpres.jpg" alt="" /></span>
+
+
+<header><h4><b>Direction and Deliverables for 6 weeks</b></h4></header>
+
+<p>We proposed in NYC a set of three deliverables:</p>
+<ul>
+	<li>(1) an onboarding experience via a bank app</li>
+	<li>(2) merchant examples of flows for digital omni-channel checkouts, and</li>
+	<li>(3) a short set of UX guidelines based on our research and findings of consumer perceptions and issues.</li>
+</ul>
+
+<p>Feedback from experts here prompted us to consider some new facets that could be valuable for Mastercard. The different markets will require quite different approaches. The EU could be the most fastidious and conservative consent requirement, while China and possibly the US could be entirely unregulated. We learned about a bunch of specific technologies and governing standards to look at - EMV 2.0 and 3DSecure both seem to have prior art we can leverage in messaging and design. And design - both a UX researcher and content strategist joined the session and had great ideas and suggested we try a diary study as well as a journey map for various levels of authentication.</p>
+
+<p>All in all the trip to NYC was well worth the effort. While we are still consolidating feedback, we received critical input from the client and are looking forward to finishing off the summer strong with a solid set of agreed upon deliverables that will be of immediate use to Mastercard’s design team.</p>
+
+
+<header><h4><b>Team Member Highlights!</b></h4></header>
+
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_skyline.jpg" alt="" /></span>
+
+<strong>Grace Guo</strong>
+
+<p>It was a really fruitful trip for us. Sharing our ideas with people from different teams, we were exposed to a number of real-world challenges our prototypes might face. GDPR and data privacy, cross environment feasibility, and many other challenges toward implementing continuous authentication were thought-provoking for us. It was also motivating to learn that our clients found our chosen topic highly relevant to what they do, and even one step further into the future. Besides work, we had a lot of fun in Koreatown!</p>
+
+
+<strong>Zohaib Khan</strong>
+
+<p>New York, New York. The day and a half at the Mastercard offices went by much too fast.
+Every meeting had its own flavor. For example, I learned a lot of colorful language from the SVP of User Experience at Mastercard, Karen Pascoe. Language like ‘up-level’, as in communicating something at a higher level, and ‘sausage-making’, referring to how something works. The meeting with Kosta, Chris and Derek, all tech people, felt like the three of them were just ‘talking shop’ amongst each other, and trying to solve sticky challenges related to Continuous Authentication. We just eagerly observed and took notes. The design team lunch feedback session was by far the most chaotic, with the room full of designers, but perhaps the most valuable.</p>
+
+<p>This trip was hugely beneficial for our project and I’m looking forward to the next few weeks when all the stuff we’ve learned will be put to the (user) test.</p>
+
+<strong>Scott Leinweber</strong>
+
+<p>I was very impressed with the level of feedback we got around questions that had been tickling us for a while. Most of our interviews lasted only 45 mins, but everyone interviewed got right to the hard issues of our problem space, balancing privacy and trust, brand image and tracking, and tech and business/product implementations. Outside of the office, we caught up with the Bloomberg Capstone team over Korean BBQ, drank our share of boba tea, and enjoyed the summer nights around Manhattan.</p>
+
+<strong>Aroon Mathai</strong>
+[IG link]
+
+<strong>Xueting Zhang</strong>
+
+<p>I’m really excited to see what we are working on aligns with Mastercard’s core value. Everyone we talked to - designers, product managers or engineers were all interested in the topic and brought their unique perspective to the table. It really helped to confirm some of our early assumptions and informed us about constraints. And though it was such a short time, I really enjoyed being in New York. It is a city with a diverse and inspiring culture. And of course, a lot of good food!</p>
+
+
+[ Aroon’s Cool photos from the trip! ]
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/w22_nyc_sunset.jpg" alt="" /></span>
+
+
+
+
+<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
 <header><h4><b>Spinning our wheels</b></h4></header>
 
 
@@ -110,7 +240,7 @@ So this pushed us to have all the computing on the customers device.</p>
 
 
 
-
+ -->
 
 
 							</div>
