blog copy fixed up

--- a/blog.html
+++ b/blog.html
@@ -248,28 +248,28 @@
 					<!-- Twentytwo -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Weeknotes 22 - Sprint 7</h2>
-							<p>xxx</p>
+							<h2>Weeknotes 22 - NYC</h2>
+							<p>Our trip to the Mastercard Digital Payments and Labs office in New York City!</p>
 							<ul class="actions vertical">
 								<li><a href="week22.html" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/map2.jpg" alt="" />
+							<img src="images/w22_nyc_skyline.jpg" alt="" />
 						</div>
 					</section>
 
 					<!-- Twentythree -->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Weeknotes 23 - xxxxx</h2>
-							<p>Last week we had some great results - both qualitative and quantitative insights. <a href="https://www.nngroup.com/articles/why-you-only-need-to-test-with-5-users/">Nielsen (2000)</a> and Co. says 5 is the ideal number of user tests for quick heuristics to work out the majority of kinks before diminishing returns.</p>
+							<h2>Weeknotes 23 - Sprint 7 - Diary Study Planning</h2>
+							<p>This week we come back to PGH to plan our largest user study ever - a twenty person diary study over 10 days.</p>
 							<ul class="actions vertical">
-								<li><a href="week22.html" class="button">Read More</a></li>
+								<li><a href="week23.html" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/testing1.jpg" alt=""/>
+							<img src="images/w23_diary_study_setup_small.jpg" alt=""/>
 						</div>
 					</section>
 
