--- a/blog.html
+++ b/blog.html
@@ -248,7 +248,7 @@
 					<!-- Twentytwo -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Weeknotes 22 - NYC</h2>
+							<h2>Weeknotes 22 - New York City</h2>
 							<p>Our trip to the Mastercard Digital Payments and Labs office in New York City!</p>
 							<ul class="actions vertical">
 								<li><a href="week22.html" class="button">Read More</a></li>
