--- a/week22.html
+++ b/week22.html
@@ -61,7 +61,7 @@
 	<li>Physical Checkout</li>
 </ul>
 
-<iframe src="//www.slideshare.net/slideshow/embed_code/key/mYXM589TJ94iAc" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ScottLeinweber/mastercard-cmu-capstone-midsummer-presentation" title="Mastercard CMU Capstone Midsummer Presentation" target="_blank">Mastercard CMU Capstone Midsummer Presentation - June 21 </a> </strong> </div>
+<iframe class="image fit" src="//www.slideshare.net/slideshow/embed_code/key/mYXM589TJ94iAc" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/ScottLeinweber/mastercard-cmu-capstone-midsummer-presentation" title="Mastercard CMU Capstone Midsummer Presentation" target="_blank">Mastercard CMU Capstone Midsummer Presentation - June 21 </a> </strong> </div>
 
 
 <header><h4><b>NYC Feedback and Crit</b></h4></header>
@@ -106,7 +106,8 @@ Every meeting had its own flavor. For example, I learned a lot of colorful langu
 <p>I was very impressed with the level of feedback we got around questions that had been tickling us for a while. Most of our interviews lasted only 45 mins, but everyone interviewed got right to the hard issues of our problem space, balancing privacy and trust, brand image and tracking, and tech and business/product implementations. Outside of the office, we caught up with the Bloomberg Capstone team over Korean BBQ, drank our share of boba tea, and enjoyed the summer nights around Manhattan.</p>
 
 <strong>Aroon Mathai</strong>
-[IG link]
+
+<a href="https://www.instagram.com/aroonmathai/">https://www.instagram.com/aroonmathai/</a>
 
 <strong>Xueting Zhang</strong>
 
