--- a/week23.html
+++ b/week23.html
@@ -103,9 +103,11 @@
 <span class="image fit" style="margin-bottom: 0px;"><img src="images/w23_diary_study_setup.png" alt="Diary Study Setup" /></span>
 
 <p>We will be serving the participants a short 3 question survey after their daily task of buying one item from a random website. There are roughly three phases most participants will go through:</p>
-<ul>1. Buying normally by typing in CC detail</ul>
-<ul>2. Various methods of auto-filling their data and letting them know why or not</ul>
-<ul>3. Various step-up challenges to verify their identity.</ul>
+<ul>
+	<li>1. Buying normally by typing in CC detail</li>
+	<li>2. Various methods of auto-filling their data and letting them know why or not</li>
+	<li>3. Various step-up challenges to verify their identity.</li>
+</ul>
 
 <p>Our main findings will be these daily surveys, plus the pre and post interview comparisons.</p>
 
