adds w24 page and to blog.html

--- a/blog.html
+++ b/blog.html
@@ -273,7 +273,19 @@
 						</div>
 					</section>
 
-
+					<!-- Twentytwo -->
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
+						<div class="content">
+							<h2>Weeknotes 24 - Diary Study Rollout</h2>
+							<p>The trials and complexity of rolling out a 20 person study, with 4 different cases, over multiple days.</p>
+							<ul class="actions vertical">
+								<li><a href="week24.html" class="button">Read More</a></li>
+							</ul>
+						</div>
+						<div class="image">
+							<img src="images/w24_diary_schedule.png" alt="" />
+						</div>
+					</section>
 
 
 
