--- a/week22.html
+++ b/week22.html
@@ -107,7 +107,12 @@ Every meeting had its own flavor. For example, I learned a lot of colorful langu
 
 <strong>Aroon Mathai</strong>
 
-<a href="https://www.instagram.com/aroonmathai/">https://www.instagram.com/aroonmathai/</a>
+
+
+<p>What stood out for me as soon as we entered the office was how Mastercard looked so much like a “trendy tech company”. Despite being the giant organization that it is, the floor had a bunch of prototypes ranging from a digital mirror to a cardless rickshaw. In one of our meetings, Karen touched upon this too. How Mastercard has been undergoing a change and how the company has been focussing on technology and design especially over the past 4 years. It was great talking to so many people from different verticals, and having discussions with them from all their different viewpoints. Talking to Erica was particularly insightful because she had worked on Masterpass and encountered a lot of the problems we have been trying to tackle. It’s going to be really interesting to consolidate all the notes we collected from these interviews and use it to inform the next stages of our project.</p>
+
+<p>Also New York is AMAZING! Where else in the world can you find panda cotton candy?</p>
+<span class="image fit" style="margin-bottom: 0px;"><img src="images/panda-cotton.png" alt="" /></span>
 
 <strong>Xueting Zhang</strong>
 
